--- a/CustomRPC/UpdatePrompt.fil.resx
+++ b/CustomRPC/UpdatePrompt.fil.resx
@@ -122,10 +122,10 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="buttonNotNow.Location" type="System.Drawing.Point, System.Drawing">
-    <value>206, 326</value>
+    <value>339, 0</value>
   </data>
   <data name="buttonNotNow.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 23</value>
+    <value>87, 25</value>
   </data>
   <data name="buttonNotNow.Text" xml:space="preserve">
     <value>Hindi ngayon</value>
@@ -137,20 +137,23 @@
     <value>Gusto mo ba i-download ang update na ito?</value>
   </data>
   <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>200, 18</value>
+    <value>295, 18</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
     <value>Huwag nang mag check para sa mga update muli</value>
   </data>
-  <data name="labelVersionsText.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Tahoma, 13pt</value>
+  <data name="labelVersionsText.Location" type="System.Drawing.Point, System.Drawing">
+    <value>119, 2</value>
+  </data>
+  <data name="labelVersionsText.Size" type="System.Drawing.Size, System.Drawing">
+    <value>213, 46</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
     <value>Kasalukuyan na version:
 Bagong version:</value>
   </data>
   <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>117, 23</value>
+    <value>119, 25</value>
   </data>
   <data name="buttonSkipUpdate.Text" xml:space="preserve">
     <value>I-skip itong version</value>
